--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,24 +1,24 @@
-specVersion: 0.0.2
+specVersion: 0.0.5
 description: Indexing all Ethereum Block data
 repository: https://github.com/blocklytics/ethereum-blocks
 schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum/contract
-    name: ConverterRegistryContract
-    network: rinkeby
+    name: WETH
+    network: base
     source:
-      address: "0x0ddff327ddf7fe838e3e63d02001ef23ad1ede8e"
-      abi: ConverterRegistryContract
+      address: "0x4200000000000000000000000000000000000006"
+      abi: WETH
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.3
+      apiVersion: 0.0.7
       language: wasm/assemblyscript
       entities:
-        - ConverterAddition
+        - Block
       abis:
-        - name: ConverterRegistryContract
-          file: ./abis/ConverterRegistryContract.json
+        - name: WETH
+          file: ./abis/WETH.json
       blockHandlers:
         - handler: handleBlock
       file: ./src/mappings/blocks.ts
